objects/copado__MC_Result__e.object
<CustomObject>
    <fields>
        <fullName>copado__Error_Code__c</fullName>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__IsFinished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Finished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__IsSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Progress_Status__c</fullName>
        <label>Progress Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__ResultId__c</fullName>
        <label>Result Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Result_Data__c</fullName>
        <label>Result Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>